<resources>
    <string name="app_name">BuyAround</string>
    <string name="hello_blank_fragment">This will be implemented in future updates!</string>
    <string name="wrong_password">Wrong password!</string>
    <string name="internal_error">Internal error!</string>
    <string name="network_error">Network error!</string>
    <string name="existing_email">User already exists!</string>
    <string name="weak_password">The password is too weak!</string>
    <string name="missing_parameters">There are missing parameters!</string>
    <string name="login_name_hint">Enter your name</string>
    <string name="login_email_hint">Enter your email</string>
    <string name="password_tv">Password</string>
    <string name="password_verification_tv">Password verification</string>
    <string name="login_password_hint">Enter your password</string>
    <string name="login_password_hint_again">Enter your password again</string>
    <string name="login_button">Log in</string>
    <string name="login_goto_register_tv">You don\'t have an account?</string>
    <string name="login_goto_register_click">Click here to create one.</string>
    <string name="register_goto_login_tv">Already have an account?</string>
    <string name="register_goto_login_click">Click here to log in.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="register_empty_name">Error! You must enter your name.</string>
    <string name="register_empty_surname">Error! You must enter your surname.</string>
    <string name="register_empty_email">Error! You must enter a valid email.</string>
    <string name="register_empty_password">Error! You must enter a password.</string>
    <string name="register_empty_birthday">Error! You must enter your birthday.</string>
    <string name="register_birthday_not_valid">Error! You must be over 18 to create an account.</string>
    <string name="register_empty_password_verification">Error! You must enter the password again.</string>
    <string name="register_passwords_dont_match">Error! The passwords don\'t match.</string>
    <string name="register_password_not_secure">Error! The password isn\'t secure enough.</string>
    <string name="login_forgot_password">Forgot your password? Click here to recover it.</string>
    <string name="password_helper">At least 8 characters long, including numbers and lowercase and uppercase letters.</string>
    <string name="password_verification_helper">The passwords must match.</string>
    <string name="register_success">Account created successfully.</string>
    <string name="surnames">Surnames</string>
    <string name="login_surname_hint">Enter your surnames here</string>
    <string name="birthday">Birthday</string>
    <string name="login_birthday_hint">dd/mm/yyyy</string>
    <string name="phone">Phone number</string>
    <string name="register_phone_hint">612 34 56 78</string>
    <string name="register_phone_not_valid">Error! You must enter a valid phone number.</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="account_personal_info">Personal Info</string>
    <string name="addresses">Addresses</string>
    <string name="payment">Payment</string>
    <string name="use_conditions">Use Conditions</string>
    <string name="log_in_acc">Log In</string>
    <string name="log_in_text_acc">To be able to buy something,\nyou need to log in.</string>
    <string name="log_out">Log out</string>
    <string name="default_payment_method">Default payment method</string>
    <string name="change_default_method">Change default</string>
    <string name="payment_cards">Credit/Debit cards</string>
    <string name="payment_add_card">Add Card</string>
    <string name="payment_paypal">PayPal accounts</string>
    <string name="payment_add_paypal">Add PayPal account</string>
    <string name="no_default_payment_method">You haven\'t chosen any default payment method yet…\nChoose one now!</string>
    <string name="no_cards">You haven\'t added any credit or debit card yet…\nAdd one now!</string>
    <string name="no_paypal">You haven\'t added any PayPal account yet…\nAdd one now!</string>
    <string name="store_label">Store</string>
    <string name="store_tv">Name</string>
    <string name="store_hint">Enter the store name</string>
    <string name="address_tv">Address</string>
    <string name="address_btn">Add new Address</string>
    <string name="location_tv">Location:</string>
    <string name="store_fragment_products">Products</string>
    <string name="store_fragment_packs">Packs</string>
    <string name="store_contact_data">Contact data:</string>
    <string name="store_phone">Phone:</string>
    <string name="store_phone_placeholder">912 34 56 78</string>
    <string name="no_products_store">Sorry…\nThis store has no products right now.</string>
    <string name="item_content_title">Content title</string>
    <string name="item_content_subtitle">Content subtitle</string>
    <string name="item_content_cost">Cost</string>
    <string name="item_content_stars">4,2</string>
    <string name="home_stores_around">Stores around you</string>
    <string name="home_top_packs">Top Packs</string>
    <string name="home_top_products">Top Products</string>
    <string name="no_stores_around">Sorry…\nThere are no stores around you yet!</string>
    <string name="no_packs_around">Sorry…\nThere are no packs around you yet!</string>
    <string name="no_products_around">Sorry…\nThere are no products around you yet!</string>
    <string name="add_store_tv">Add a store</string>
    <string name="add_pack_tv">Add a pack</string>
    <string name="add_product_tv">Add a product</string>
    <string name="search_top_search">Top Search</string>
    <string name="search_nav_categories">Navigate through categories</string>
    <string name="cart_items">Items</string>
    <string name="cart_clear">Clear Cart</string>
    <string name="cart_to_pay">Proceed to Pay</string>
    <string name="orders_repeat_order">Repeat Order</string>
    <string name="orders_last_orders">Last Orders</string>
    <string name="no_orders_yet">You don\'t have any orders yet.\nMake your first purchase!</string>
    <string name="search_hint">What are you looking for?</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="categories">Categories</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="quantity">Quantity</string>
    <string name="search">Search</string>
    <string name="add_pack">Add pack</string>
    <string name="location">Location</string>
    <string name="orders">Orders</string>
    <string name="notifications">Notifications</string>
    <string name="favourites">Favourites</string>
    <string name="my_account">Account</string>
    <string name="settings">Settings</string>
    <string name="customer_support">Customer support</string>
    <string name="legal">Legal</string>
    <string name="cart">Cart</string>
    <string name="about_us">About us</string>
    <string name="product_label">Product</string>
    <string name="product_tv">Product</string>
    <string name="product_hint">Enter the product name</string>
    <string name="category_tv">Category</string>
    <string name="price_tv">Price:</string>
    <string name="points">Points:</string>
    <string name="product_other_info">Other info</string>
    <string name="currency_tv">Currency</string>
    <string name="description_tv">Description:</string>
    <string name="description_hint">Enter a brief description</string>
    <string name="images_tv">Images</string>
    <string name="product_unit">unit</string>
    <string name="share_product_via">Share product via</string>
    <string name="share_product_text">Check out this &#57932; product I found on BuyAround!\n\n</string>
    <string name="share_product_only_for"> only for </string>
    <string name="store_information">Check out more products of this store:</string>
    <string name="address_label">Address</string>
    <string name="no_addresses">You haven\'t added any address yet!\nAdd one now!</string>
    <string name="add_address">Add a new address</string>
    <string name="fav_stores">Favourite stores</string>
    <string name="fav_products">Favourite products</string>
    <string name="fav_packs">Favourite packs</string>
    <string name="no_fav_stores_yet">You haven\'t marked any store as favourite yet!</string>
    <string name="no_fav_packs_yet">You haven\'t marked any pack as favourite yet!</string>
    <string name="no_fav_products_yet">You haven\'t marked any product as favourite yet!</string>
    <string name="item_notification_text">The deliveryman has finished purchasing goods and is heading to your portal. He/She will be there in approximately</string>
    <string name="item_notification_time">X minutes.</string>
    <string name="no_notifications_yet">You don\'t have any notifications yet.\nMake your first purchase!</string>
    <string name="what_is_buyaround">What is BuyAround?</string>
    <string name="what_is_buyaround_text">BuyAround is an app for making purchases at nearby stores easily and quickly.\n\nThis app was created in the wake of the Covid-19 crisis, which threatened local commerce. In order to reactivate it, we sought the most convenient way to give visibility to the shops around us.</string>
    <string name="who_are_we">Who are we?</string>
    <string name="who_are_we_text">The BuyAround team is formed by 3 engineering students of La Salle - URL.\n\nIn view of the economic crisis caused by the global pandemic of 2020, and in an attempt to contribute our bit in restoring normality, we decided that we wanted to help the local shops, as they would be directly affected by this crisis.</string>
    <string name="more_info_text">For more information you can visit our web page at:\n<a href="https://buyaround.cat">https://buyaround.cat</a>\n\nThis is an open-source project, so if you want to check the code you can access it through this GitHub repository:\n<a href="https://github.com/Iscle/BuyAround">https://github.com/Iscle/BuyAround</a></string>
    <string name="credit_names">Developers</string>
    <string name="credit_names_text">Iscle Gil.\nFerran Montoliu.\nJoan Carrión.</string>
    <string name="nearby_stores_tv">Number of nearby stores:</string>
    <string name="nearby_stores_num_tv">0</string>
    <string name="name">Name</string>
    <string name="radius_number">Enter the radius in meters:</string>
    <string name="radius_selected">500</string>
    <string name="radius_meters">m</string>
    <string name="legal_text_1">This application is an open-source project running under <i>Apache License 2.0</i>.</string>
    <string name="legal_text_2">It is a non-functional prototype developed as a proof of concept. If the project becomes real later, we will update the information and inform all our registered users.</string>
    <string name="legal_more_info">For more information, visit our web page at:\n<a href="https://buyaround.cat/legal.html">https://buyaround.cat/legal.html</a></string>
    <string name="cart_items_text_singular">product</string>
    <string name="cart_items_text_plural">products</string>
    <string name="cart_total_cost_text">Total:</string>
    <string name="currency">€</string>
    <string name="check_cart">Check cart</string>
    <string name="pack_label">Pack</string>
    <string name="photo">Photo</string>
    <string name="update_profile">Update profile</string>
    <string name="personal_info_name">Name</string>
    <string name="personal_info_surname">Surname</string>
    <string name="personal_info_email">Email</string>
    <string name="personal_info_birthday">Birthday</string>
    <string name="personal_info_password">Password</string>
    <string name="edit_password">Edit password</string>
</resources>