<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item android:id="@+id/locationFragment"
        android:title="@string/location"
        android:icon="@drawable/ic_location" />
    <item android:id="@+id/cartFragment"
        android:icon="@drawable/ic_local_grocery_store_white_24dp"
        android:title="@string/cart" />
    <item android:id="@+id/ordersFragment"
        android:title="@string/orders"
        android:icon="@drawable/ic_orders" />
    <item android:id="@+id/notificationsFragment"
        android:title="@string/notifications"
        android:icon="@drawable/ic_notifications" />
</menu>