<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragment.PaymentMethodsFragment">

    <TextView
        style="@style/TitlesTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/payment_cards" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/payment_cards_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="8dp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/cards_empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingHorizontal="24dp"
        android:paddingTop="16dp"
        android:text="@string/no_cards"
        android:visibility="gone" />

    <Button
        android:id="@+id/payment_add_card_btn"
        style="@style/GreenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/payment_add_card" />

    <TextView
        style="@style/TitlesTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/payment_paypal" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/payment_paypal_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="8dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/paypal_empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingHorizontal="24dp"
        android:paddingTop="16dp"
        android:text="@string/no_paypal" />

    <Button
        android:id="@+id/payment_add_paypal_btn"
        style="@style/GreenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/payment_add_paypal" />

</LinearLayout>
