<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragment.FavouritesFragment">

    <EditText
        android:id="@+id/search_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_edittext_icon"
        android:drawableStart="@drawable/ic_search_with_bg"
        android:drawablePadding="8dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/search_hint"
        android:inputType="text" />

    <TextView
        android:id="@+id/fav_stores_tv"
        style="@style/TitlesThemeLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/fav_stores" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fav_stores_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/stores_empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="24dp"
        android:text="@string/no_fav_stores_yet"
        android:visibility="visible" />

    <TextView
        android:id="@+id/fav_packs_tv"
        style="@style/TitlesThemeLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/fav_packs" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fav_packs_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/packs_empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="24dp"
        android:text="@string/no_fav_packs_yet"
        android:visibility="visible" />

    <TextView
        android:id="@+id/fav_products_tv"
        style="@style/TitlesThemeLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/fav_products" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fav_products_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/products_empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="24dp"
        android:text="@string/no_fav_products_yet"
        android:visibility="visible" />

</LinearLayout>
