<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.LegalFragment">

    <TextView
        style="@style/SubTitlesTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        android:text="@string/legal_text_1" />

    <TextView
        style="@style/SubTitlesTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        android:text="@string/legal_text_2" />

    <TextView
        style="@style/SubTitlesTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autoLink="web"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        android:text="@string/legal_more_info" />

</LinearLayout>